- Added mixin to reset underline hover spaceless border on media breakpoint - Added fine adjustment to 'aspect-break' mixin - Added spacing in footer form (email + submit) - Tried out some img backgrounds and readded background module to style.scss - Go back to using rem for "$nav-row-height" as with this the sizings do not change through the element font sizes - Fix table bar fade in - Added margin bottom variable for list items, in order to reset with reset_underline... on breakpoint - Renamed breakpoint variables to human readable format and added more sensible breakpoints - Fine adjusted existing breakpoints - Added variables for the 3 main navigation element heights - Set navigation element height to line height in order to center link text - Fix table-bar positioning - Improve spacing of nav-table links - Add footer elements breakpoint padding and fixed them to stretch to full width

--- a/background/img-backdrop.scss
+++ b/background/img-backdrop.scss
@@ -18,10 +18,23 @@
     }
 }
 
-.sections-strip{
-    @include image-backdrop('../img/path-experiments-thin-2.svg'){
-        opacity: 0.02;
-        filter: blur(0px) hue-rotate(10deg) saturate(0) brightness(95%);
-        background-size: 300%;
+.sections-strip {
+    background: none;
+    @include image-backdrop('/assets/img/logo/path-experiments-thin-2.svg'){
+    //@include image-backdrop('/assets/img/pexels-plants-portrait.jpg'){
+        opacity: 0.0;
+        //opacity: 0.03;
+        filter: saturate(1.3) hue-rotate(200deg); //brightness(35%);
+        //filter: blur(0px) hue-rotate(60deg) saturate(2.1); //brightness(35%);
+        background-size: 100%;
     }
+    //backdrop-filter: blur(15px);
+    
+    & > div {
+        //backdrop-filter: blur(15px);
+        //color: white;
+        background: rgba(255,255,255, 0.9);
+    }
+
+
 }
