--- a/controls/forms.scss
+++ b/controls/forms.scss
@@ -71,6 +71,8 @@ form {
 
     input, button, .rbtn {
         box-shadow: $input-shadow;
+        margin-top: 0.4em;
+        margin-bottom: 0.4em;
     }
 }
 
